[FIX] viin_brand_common: wrong color for badge primary

--- a/viin_brand_common/static/src/webclient/webclient.scss
+++ b/viin_brand_common/static/src/webclient/webclient.scss
@@ -9,6 +9,6 @@
 //== Badges
 .badge {
     &.text-bg-default, &.bg-light, &.text-bg-light, &.bg-default, &.text-primary{
-        outline: 1px solid $o-enterprise-color;
+        color: $o-enterprise-primary-color !important;
     }
 }
